--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -23,7 +23,7 @@
      <!--  Linkup logo  -->
     <center>
         {% include 'lib/header.html' %}
-    <h1 style="background-color:#0a0b22; color:white"> Lorem Ipsum</h1>
+    <h1 style="background-color:#0a0b22; color:white"> Prueba {{nombre}}</h1>
 <div class="cuerpo" style="text-align: justify;">
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eget lobortis eros.
