agregado traduccion para envio de credenciales

--- a/api/templates/send_credentials.html
+++ b/api/templates/send_credentials.html
@@ -27,9 +27,9 @@
     <h1 style="background-color:#0a0b22; color:white"> {% trans "Title"|title %} {{nombre}}</h1>
 <div class="cuerpo" style="text-align: justify;">
 
-    <h3>Crendenciales</h3>
-    <p> User: {{user}}</p>
-    <p> Password: {{pass}} </p>
+    <h3>{% trans "Credentials"|title %}</h3>
+    <p> {% trans "User"|title %} : {{user}}</p>
+    <p> {% trans "Password"|title %} : {{pass}} </p>
  </div>
 
 {% include 'lib/footer.html' %}
