--- a/api/templates/send_credentials.html
+++ b/api/templates/send_credentials.html
@@ -26,10 +26,9 @@
         {% include 'lib/header.html' %}
     <h1 style="background-color:#0a0b22; color:white"> {% trans "Title"|title %} {{nombre}}</h1>
 <div class="cuerpo" style="text-align: justify;">
-
-    <h3>Crendenciales</h3>
-    <p> User: {{user}}</p>
-    <p> Password: {{pass}} </p>
+    <h3>{% trans "credentials"|title %}</h3>
+    <p> {% trans "user"|title %}: {{user}}</p>
+    <p> {% trans "password"|title %}: {{pass}} </p>
  </div>
 
 {% include 'lib/footer.html' %}
