--- a/api/templates/send_credentials.html
+++ b/api/templates/send_credentials.html
@@ -25,7 +25,7 @@
     <center>
         {% include 'lib/header.html' %}
     <h1 style="background-color:#0a0b22; color:white"> {% trans "Title"|title %} {{nombre}}</h1>
-<div class="cuerpo" style="text-align: justify;">
+<div style="text-align: justify;">
 
     <h3>{% trans "credentials"|title %}</h3>
     <p> {% trans "user"|title %}: {{user}}</p>
