--- a/api/templates/email/empower.html
+++ b/api/templates/email/empower.html
@@ -6,7 +6,7 @@
 
   <div style="text-align: justify;">
     <p>
-      {% trans "Please click the next link for get your plan transfer" %} 
+      {% trans "Please click the next link for get your plan empower" %}
       <br>
       <strong>{{link}}</strong>
     </p>
