--- a/api/templates/email/support.html
+++ b/api/templates/email/support.html
@@ -4,18 +4,18 @@
   <h1>{{title}}</h1>
   <div style="text-align: justify;">
     <p>
-      <strong>{% trans "name" %}</strong>: {{name}}
+      <strong>{% trans "name"|title %}</strong>: {{name}}
       <br>
 
-      <strong>{% trans "email" %}</strong>: {{email}}
+      <strong>{% trans "email"|title %}</strong>: {{email}}
       <br>
 
-      <strong>{% trans "phone" %}</strong>: {{phone}}
+      <strong>{% trans "phone"|title %}</strong>: {{phone}}
       <br>
 
-      <strong>{% trans "query" %}</strong>: {{query}}
+      <strong>{% trans "query"|title %}</strong>: {{query}}
       <br>
-      <strong>{% trans "message" %}</strong>: {{message}}
+      <strong>{% trans "message"|title %}</strong>: {{message}}
       <br>
     </p>
   </div>
