confirmacion de pago en cuota

--- a/api/templates/email/pin_code.html
+++ b/api/templates/email/pin_code.html
@@ -9,7 +9,7 @@
     <p>
       {% trans "" %}
       <br>
-      <strong>{{qset.pin_code}}</strong>
+      <strong>{{record.pin_code}}</strong>
     </p>
 {% endfor %}
   </div>
