--- a/api/templates/email/base.html
+++ b/api/templates/email/base.html
@@ -23,10 +23,6 @@
 margin: 0;
 padding: 0; }
 
-table, tr, td {
-vertical-align: top;
-border-collapse: collapse; }
-
 .ie-browser table, .mso-container table {
 table-layout: fixed; }
 
@@ -163,7 +159,7 @@ font-size: 0px; } }
 
 </style>
 </head>
-<body class="clean-body" style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #0c0f1d">
+<body class="clean-body" style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;">
   <style type="text/css" id="media-query-bodytag">
       @media (max-width: 520px) {
         .block-grid {
@@ -217,6 +213,20 @@ font-size: 0px; } }
           overflow: hidden!important;
           font-size: 0px!important;
         }
+      }
+      table {
+          border-collapse: collapse;
+          width: 100%;
+          margin-top:25px;
+      }
+
+      td, th {
+          border: 1px solid #dddddd;
+          text-align: left;
+          padding: 8px;
+      }
+    .linkup tr:nth-child(2n) {
+      	background-color: #dddddd;
       }
     </style>
 
