--- a/api/templates/email/pin_code.html
+++ b/api/templates/email/pin_code.html
@@ -3,7 +3,8 @@
 {% block content_mail %}
 
 <div style="margin:20px 20px">
-<h1> {% trans "Your pin code"|title %} </h1>
+<h1> Tu Código Pin</h1>  
+<!-- <h1>  trans "Your pin code"|title  </h1> -->
 <div>
 
 <div style="text-align: justify;">
