--- a/api/templates/email/empower.html
+++ b/api/templates/email/empower.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% block content_mail %}
 
-  <h1> {% trans "LinkUp Give you Congratulations!"|title %} </h1>
+  <h1> {% trans "You have been empowered with a query plan"|title %} </h1>
 
   <div style="text-align: justify;">
     <p>
