Se actualizaron los mensajes enviados por correo para transferir, compartir, facuttar y el de comprobacion de pago

--- a/api/templates/email/pin_code.html
+++ b/api/templates/email/pin_code.html
@@ -6,9 +6,11 @@
 <h1 style="margin:20px 20px">{% trans "Your Pin Code" %}</h1>  
 
 <div style="text-align: justify;">
-{% trans "Congratulations on acquiring your consultation plan(s).
+{% blocktrans trimmed %}
+Congratulations on acquiring your consultation plan(s).
 We leave you the data of your plan(s) and code(s)
-pin for when you want to activate them" %}:
+pin for when you want to activate them
+{% endblocktrans %}:
 
   <br>
 <table class="linkup">
