--- a/api/templates/email/empower.html
+++ b/api/templates/email/empower.html
@@ -4,9 +4,9 @@
   <h1> {% trans "You have been empowered with a query plan"|title %} </h1>
   <div style="text-align: justify;">
     <p>
-      {% trans "Please click the next link for get your plan empower" %}
+      {{ message }}
       <br>
-      <strong>{{link}}</strong>
+      <strong>{{ link }}</strong>
     </p>
   </div>
 {% endblock content_mail %}
