--- a/api/templates/email/share.html
+++ b/api/templates/email/share.html
@@ -4,9 +4,9 @@
   <h1> {% trans "A query plan has been shared with you"|title %} </h1>
   <div style="text-align: justify;">
     <p>
-      {% trans "Please click the next link for get your plan share" %}
+      {{ message }}
       <br>
-      <strong>{{link}}</strong>
+      <strong>{{ link }}</strong>
     </p>
   </div>
 {% endblock content_mail %}
