--- a/api/templates/email/transfer.html
+++ b/api/templates/email/transfer.html
@@ -4,9 +4,9 @@
   <h1> {% trans "A query plan has been transferred to your"|title %} </h1>
   <div style="text-align: justify;">
     <p>
-      {% trans "Please click the next link for get your plan transfer" %}
+      {{ message }}
       <br>
-      <strong>{{link}}</strong>
+      <strong>{{ link }}</strong>
     </p>
   </div>
 {% endblock content_mail %}
